# CGRA_project

./: .gitignore  CAPSTONE_PROJECT_2.txt  CLAUDE.md  Makefile  README.md
00_src/: cgra_apb_csr.sv  cgra_array.sv  cgra_array_4x4.sv  cgra_axi_csr.sv  cgra_config_broadcaster.sv  cgra_config_loader.sv  cgra_control_unit.sv  cgra_dma_chain_ctrl.sv  cgra_dma_engine.sv  cgra_dma_subsystem.sv  cgra_pe.sv  cgra_result_fifo.sv  cgra_router.sv  cgra_tile.sv  cgra_tile_memory.sv  cgra_top.sv  cgra_top_new.sv
01_bench/: cgra_protocol_monitor.sv  config.mem  constrs_haoyue_hdmi.xdc  constrs_pynq_z2.xdc  dma_protocol_checker.sv  golden.mem  image.mem  lfsr_32.v  qdiv.v  restore.tcl  run_new_sim.sh  run_sim.sh  sim_main.cpp  tb_calc_tests.sv.inc  tb_cgra_array_4x4_golden.sv  tb_cgra_axi_csr_golden.sv  tb_cgra_config_loader.sv  tb_cgra_pe.sv  tb_top.sv  (+16 more)
scripts/License_Plate_Recognition_Cpp/c_alpr/: CLAUDE.md  CLEANUP_GUIDE.md  CMakeLists.txt  README.md  cleanup.ps1  debug_run_webcam_c.bat  list_webcams.bat  run_e2e_test.bat  run_e2e_test.sh  run_webcam_c.bat
scripts/License_Plate_Recognition_Cpp/c_alpr/configs/: alpr_config.ini
scripts/License_Plate_Recognition_Cpp/c_alpr/docs/: ARCHITECTURE.md  MIGRATION_CHECKLIST.md  PLAN_AUDIT_TEMPLATE.md  QUICKSTART.md
scripts/License_Plate_Recognition_Cpp/c_alpr/include/: alpr_pipeline.h  alpr_types.h  batch_process.h  capture_ffmpeg.h  char_map.h  config.h  display_ffplay.h  draw_overlay.h  image_io.h  nms.h  onnx_engine.h  plate_assemble.h  preprocess.h  result_dump.h  yolo_decode.h
scripts/License_Plate_Recognition_Cpp/c_alpr/src/: alpr_pipeline.c  app_main.c  batch_process.c  capture_ffmpeg.c  char_map.c  config.c  display_ffplay.c  draw_overlay.c  image_io.c  nms.c  onnx_engine.c  plate_assemble.c  preprocess.c  result_dump.c  yolo_decode.c
scripts/License_Plate_Recognition_Cpp/c_alpr/tests/: test_plate_assemble.c
scripts/License_Plate_Recognition_Cpp/c_alpr/tools/: compare_baseline.py  convert_to_bmp24.py  export_onnx.py  generate_python_baseline.py
(+562 files in other folders)
